02-flex-header: Fix header positioning and spacing

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -10,7 +10,7 @@ body {
 
 .para.small-para {
   font-size: 14px;
-  font-weight: 800;
+  /* font-weight: 800; */
 }
 
 .para {
